<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.biaoke.bklive.user.activity.ForgetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/x20"
            android:scaleType="centerCrop"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:text="@string/login_pin"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:layout_marginTop="45px"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/china"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/put_phone_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="45"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/phone_num"
            android:inputType="number" />

        <Button
            android:id="@+id/send_pin"
            android:layout_width="0dp"
            android:layout_height="@dimen/y70"
            android:layout_marginStart="20dp"
            android:layout_weight="30"
            android:background="@drawable/buttonstyle"
            android:text="@string/send_pin"
            android:textColor="#6f57d6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y3"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:layout_marginTop="@dimen/y73"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/x76"
            android:text="@string/pin"
            android:textSize="@dimen/x35" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/put_pin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y87"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/put_pin"
                android:inputType="number"
                android:paddingLeft="@dimen/x20"
                android:textSize="@dimen/x35" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/y3"
                android:background="#dddddd" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/x589"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y100"
        android:background="@drawable/buttonstyle"
        android:text="@string/btn_login"
        android:textColor="#6f57d6"
        android:textSize="@dimen/x34" />
</LinearLayout>
