<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.biaoke.bklive.user.activity.HeadSetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/background_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/x20"
            android:scaleType="centerCrop"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/put_info"
            android:textColor="@color/white"
            android:textSize="@dimen/x34" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y420"
        android:gravity="center"
        android:orientation="vertical">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/iv_user_head"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerInside"
            android:src="@drawable/head_end"
            app:border="true"
            app:border_color="#16f5f5f5"
            app:border_width="6dp"
            app:selector="true"
            app:selector_color="#4D000000"
            app:selector_stroke_color="#16f5f5f5"
            app:selector_stroke_width="6dp"
            app:shadow="false" />

        <Button
            android:id="@+id/btn_head_set"
            android:layout_width="@dimen/x198"
            android:layout_height="@dimen/y55"
            android:layout_marginTop="@dimen/y24"
            android:background="@drawable/hotstyle2"
            android:text="设置头像"
            android:textSize="@dimen/x34"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/et_nickName"
            android:text="@string/nickName"
            android:textColor="#222222"
            android:textSize="@dimen/x34" />

        <EditText
            android:id="@+id/et_nickName"
            android:layout_width="@dimen/x400"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/sex"
            android:text="@string/sex"
            android:textColor="#222222"
            android:textSize="@dimen/x34" />

        <RadioGroup
            android:id="@+id/sex"
            android:layout_width="@dimen/x340"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:checkedButton="@+id/male"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="@dimen/x34" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femal"
                android:textSize="@dimen/x34" />
        </RadioGroup>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="@dimen/x589"
        android:layout_height="@dimen/y100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y93"
        android:background="@drawable/buttonstyle"
        android:text="@string/finish"
        android:textColor="#6f57d6"
        android:textSize="@dimen/x34" />

</LinearLayout>
