<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.biaoke.bklive.activity.MessageActivity">

    <RelativeLayout
        android:id="@+id/ll_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/background_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/x15"
            android:scaleType="centerCrop"
            android:src="@mipmap/back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/hotstyle"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/tv_gossip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x40"
                android:layout_marginStart="@dimen/x40"
                android:text="@string/gossip"
                android:textColor="@drawable/colortextview2"
                android:textSize="@dimen/x34" />

            <TextView
                android:id="@+id/tv_privatemessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x40"
                android:text="@string/privatemessage"
                android:textColor="@drawable/colortextview2"
                android:textSize="@dimen/x34" />

            <TextView
                android:id="@+id/tv_mymessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x40"
                android:text="@string/mymessage"
                android:textColor="@drawable/colortextview2"
                android:textSize="@dimen/x34" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
